--- a/README.Rmd
+++ b/README.Rmd
@@ -15,14 +15,13 @@ knitr::opts_chunk$set(
 # Overview
 
 <!-- badges: start -->
-[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/fbiAPI)](https://cran.r-project.org/package=fbiAPI.png)
-[![Travis-CI Build Status](https://travis-ci.org/jacobkap/fbiAPI.svg?branch=master)](https://travis-ci.org/jacobkap/fbiAPI) [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbiAPI?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbiAPI) [![Coverage status](https://codecov.io/gh/jacobkap/fbiAPI/branch/master/graph/badge.svg)](https://codecov.io/github/jacobkap/fbiAPI?branch=master)
-[![](http://cranlogs.r-pkg.org/badges/grand-total/fbiAPI?color=blue)](https://cran.r-project.org/package=fbiAPI)
-[![Codecov test coverage](https://codecov.io/gh/jacobkap/fbiAPI/branch/master/graph/badge.svg)](https://codecov.io/gh/jacobkap/fbiAPI?branch=master)
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/fbi)](https://cran.r-project.org/package=fbi.png)
+[![Travis-CI Build Status](https://travis-ci.org/jacobkap/fbi.svg?branch=master)](https://travis-ci.org/jacobkap/fbi) [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbi?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbi) [![Coverage status](https://codecov.io/gh/jacobkap/fbi/branch/master/graph/badge.svg)](https://codecov.io/github/jacobkap/fbi?branch=master)
+[![](http://cranlogs.r-pkg.org/badges/grand-total/fbi?color=blue)](https://cran.r-project.org/package=fbi)
 <!-- badges: end -->
 
-The goal of fbiAPI is to ...
+The goal of `fbi` is to ...
 
 ## Installation
 
-You can install the released version of fbiAPI from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of fbi from [CRAN](https://CRAN.R-project.org) with:
