--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,9 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/fbi)](https://cran.r-project.org/package=fbi.png)
-[![Travis-CI Build Status](https://travis-ci.org/jacobkap/fbi.svg?branch=master)](https://travis-ci.org/jacobkap/fbi) [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbi?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbi) [![Coverage status](https://codecov.io/gh/jacobkap/fbi/branch/master/graph/badge.svg)](https://codecov.io/github/jacobkap/fbi?branch=master)
+[![Travis-CI Build Status](https://travis-ci.org/jacobkap/fbi.svg?branch=master)](https://travis-ci.org/jacobkap/fbi) 
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbi?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbi) 
+[![Coverage status](https://codecov.io/gh/jacobkap/fbi/branch/master/graph/badge.svg)](https://codecov.io/github/jacobkap/fbi?branch=master)
 [![](http://cranlogs.r-pkg.org/badges/grand-total/fbi?color=blue)](https://cran.r-project.org/package=fbi)
 <!-- badges: end -->
 
