Start work on arrest functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbi?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbi) 
 [![Coverage status](https://codecov.io/gh/jacobkap/fbi/branch/master/graph/badge.svg)](https://codecov.io/github/jacobkap/fbi?branch=master)
 [![](http://cranlogs.r-pkg.org/badges/grand-total/fbi?color=blue)](https://cran.r-project.org/package=fbi)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
 The goal of `fbi` is to ...
