--- a/README.Rmd
+++ b/README.Rmd
@@ -12,17 +12,16 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
+
 # Overview
 
 <!-- badges: start -->
-[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/fbi)](https://cran.r-project.org/package=fbi.png)
-[![Travis-CI Build Status](https://travis-ci.org/jacobkap/fbi.svg?branch=master)](https://travis-ci.org/jacobkap/fbi) 
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbi?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbi) 
-[![](http://cranlogs.r-pkg.org/badges/grand-total/fbi?color=blue)](https://cran.r-project.org/package=fbi)
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/fbi)](https://cran.r-project.org/package=fbi.png) [![Travis-CI Build Status](https://travis-ci.org/jacobkap/fbi.svg?branch=master)](https://travis-ci.org/jacobkap/fbi) [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/jacobkap/fbi?branch=master&svg=true)](https://ci.appveyor.com/project/jacobkap/fbi) [![](http://cranlogs.r-pkg.org/badges/grand-total/fbi?color=blue)](https://cran.r-project.org/package=fbi) [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+
 <!-- badges: end -->
 
-The goal of `fbi` is to connect to the FBI's [Crime Data Explorer](crime-data-explorer.fr.cloud.gov/) to get crime data (UCR and NIBRS) from their API. 
+The goal of `fbi` is to connect to the FBI's [Crime Data Explorer](crime-data-explorer.fr.cloud.gov/) to get crime data (UCR and NIBRS) from their API.
 
 ## Installation
 
@@ -32,8 +31,10 @@ You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("jacobkap/fbi")
+devtools::install_github("pirshtuk/fbi")
+devtools::install_github("pirshtuk/fbi",force = TRUE)
 ```
+
 ## Usage
 
 ```{r example}
